--- a/pages/about.html
+++ b/pages/about.html
@@ -65,7 +65,7 @@
                                 <img src="../assets/images/Rum.jpg" width="100%">
                             </td>
                             <td class="table-div">
-                                <iframe src="https://www.youtube.com/embed/MKk1u5RMTn4" title="Poets of the Fall - Carnival of Rust" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/MKk1u5RMTn4" title="Poets of the Fall - Carnival of Rust" width="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </td>
                             <td>
                                 <img src="../assets/images/Coffee.jpg" width="100%">
